--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "sqlite3": "^4.1.1",
     "cookie-parser": "^1.4.5",
-    "body-parser": "^1.19.0"
+    "body-parser": "^1.19.0",
+    "serve-favicon": "^2.5.1"
   },
   "engines": {
     "node": "12.x"
